--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ border-bottom: 1px solid slategray;}
     align-items: center;
     justify-content: space-between;
 }
-@media (max-width: 765px;) {
+@media (max-width: 765px) {
     body {background-color: red;}
 }
 nav ul { display: none;
@@ -263,3 +263,44 @@ color: white;
 margin: 16px 0;
 font-size: 16px;
 cursor:pointer;}
+
+/* media query iniciar sesion */
+
+@media only screen and (max-width:500px) {
+    .iniciar-sesion { background-color: black;
+    }
+    .form-reg {width: 60%;
+    }
+    .foot-iniciar-sesion{ 
+        background-color: grey;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        justify-content: space-around;
+        text-decoration: solid;
+
+    }
+
+}
+
+@media only screen and (min-width: 501px) and (max-width: 960px) {
+    .iniciar-sesion { background-color: black;
+    }
+    .form-reg {width: 80%;
+    }
+    .foot-iniciar-sesion{ 
+        background-color: grey;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        justify-content: space-around;
+        text-decoration: solid;}
+    }
+
+    @media only screen and (min-width: 961px) {
+        .iniciar-sesion { background-color: black;
+        }
+        .form-reg {width: 70%;
+        }
+        .foot-iniciar-sesion{ 
+            background-color: grey;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            justify-content: space-around;
+            text-decoration: solid;}
+    }
